# blob_detector

./: CMakeLists.txt  main.cpp
include/: blob_detection.h  image_preprocessing.h
lib/: blob_detection.cpp  image_preprocessing.cpp
